--- a/index.html
+++ b/index.html
@@ -4,12 +4,82 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+
+    <!--Font Awesome CSS-->
+    <link rel="stylesheet" href="./css/fontawesome-all.css">
+
     <!-- Custom CSS -->
     <link rel="stylesheet" href="./css/styles.css">
 
     <title>D-503 Game Portal</title>
 </head>
 <body>
-    <h1>MERHABA</h1>
+    
+    <!--  HEADER -->
+    <header class="main-header">
+
+        <!--   TOP HEADER -->
+        <div class="top-header">
+            <div class="container">
+                <div class="logo">
+                    <h1>D-503</h1>
+                </div>
+
+                <ul class="top-social-menu">
+                    <li><a href="#"><i class="fab fa-twitter"></i></a></li>
+                    <li><a href="#"><i class="fab fa-facebook"></i></a></li>
+                    <li><a href="#"><i class="fab fa-youtube"></i></a></li>
+                    <li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+                    <li><a href="#"><i class="fab fa-google"></i></a></li>
+                    <li><a href="#"><i class="fab fa-amazon"></i></a></li>
+                </ul>
+
+                <div class="login-area">
+                    <a href="#" class="btn">Login<span><i class="fas fa-sign-in-alt"></i></span></a>
+                    <a href="#" class="btn">Sign Up<span><i class="fas fa-user-plus"></i></span></a>
+                </div>
+            </div>
+        </div>
+
+        <!--   NAV HEADER -->
+        <div class="nav-header">
+            <div class="container">
+                <div class="nav-header">
+                    <nav class="navbar">
+
+                        <ul class="navbar-list">
+                            <li><a href="#">Home</a></li>
+                            <li><a href="#">Games</a>
+                                <i class="fas fa-chevron-down"></i>
+                                <ul class="dropdown">
+                                    <li><a href="#">Game I</a></li>
+                                    <li><a href="#">Game II</a></li>
+                                </ul>
+                            </li>
+                            <li><a href="#">News</a></li>
+                            <li><a href="#">Blog</a>
+                                <i class="fas fa-chevron-down"></i>
+                                <ul class="dropdown">
+                                    <li><a href="#">Game I</a></li>
+                                    <li><a href="#">Game II</a></li>
+                                </ul>
+                            </li>
+                            <li><a href="#">Software</a></li>
+                            <li><a href="#">Contact</a></li>
+                        </ul>
+
+                        <div class="search-area">
+                            <form>
+                                <input type="search" placeholder="Seacrh">
+                                <button type="submit" class="btn"><i class="fa fa-search"></i></button>
+                            </form>
+                        </div>
+                        
+                    </nav>
+                </div>
+            </div>
+        </div>
+
+    </header>
 </body>
 </html>
