--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
 
     <!--  HEADER -->
-    <header class="main-header">
+    <header class="main-header bg-dark">
 
         <!--   TOP HEADER -->
         <div class="top-header">
@@ -36,14 +36,13 @@
                 </ul>
 
                 <div class="login-area">
-                    <a href="#" class="btn">Login<span><i class="fas fa-sign-in-alt"></i></span></a>
-                    <a href="#" class="btn">Sign Up<span><i class="fas fa-user-plus"></i></span></a>
+                    <a href="#" class="btn btn-primary">Login<span><i class="fas fa-sign-in-alt"></i></span></a>
+                    <a href="#" class="btn ml-2">Sign Up<span><i class="fas fa-user-plus"></i></span></a>
                 </div>
             </div>
         </div>
 
         <!--   NAV HEADER -->
-        <div class="nav-header">
             <div class="container">
                 <div class="nav-header">
                     <nav class="navbar">
@@ -61,8 +60,8 @@
                             <li><a href="#">Blog</a>
                                 <i class="fas fa-chevron-down"></i>
                                 <ul class="dropdown">
-                                    <li><a href="#">Game I</a></li>
-                                    <li><a href="#">Game II</a></li>
+                                    <li><a href="#">Blog I</a></li>
+                                    <li><a href="#">Blog  II</a></li>
                                 </ul>
                             </li>
                             <li><a href="#">Software</a></li>
@@ -79,7 +78,6 @@
                     </nav>
                 </div>
             </div>
-        </div>
 
     </header>
 </body>
