--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
         <!--Main Slider-->
         <div class="main-slider owl-carousel owl-theme">
             <!--Single Slide-->
-            <div class="single-slide">
-                <img src="./img/slide_1.jpg">
+            <div class="single-slide" data-dot="<span>01.</span>">
+                <img src="./img/slide_3.jpg">
                 <div class="slide-overlay">
                     <div class="container">
                         <div class="slide-content">
@@ -102,7 +102,7 @@
                 </div>
             </div>
             <!--Single Slide-->
-            <div class="single-slide">
+            <div class="single-slide" data-dot="<span>02.</span>">
                 <img src="./img/slide_2.jpg">
                 <div class="slide-overlay">
                     <div class="container">
@@ -114,8 +114,8 @@
                 </div>
             </div>
             <!--Single Slide-->
-            <div class="single-slide">
-                <img src="./img/slide_3.jpg">
+            <div class="single-slide" data-dot="<span>03.</span>">
+                <img src="./img/slide_1.jpg">
                 <div class="slide-overlay">
                     <div class="container">
                         <div class="slide-content">
@@ -139,17 +139,9 @@
     <!-- OWL CAROUSEL -->
     <script src="js/owl.carousel.js"></script>
 
-    <script>
-        $(document).ready(function(){
-        
-        let owl = $(".owl-carousel").owlCarousel({
-            autoplay :false,
-            dots:false,
-            items: 1
+    <!-- CUSTOM JS -->
+    <script src="js/main.js"></script>
 
-            })
-        });
-    </script>
 
 </body>
 
