--- a/index.html
+++ b/index.html
@@ -125,12 +125,26 @@
                     </div>
                 </div>
             </div>            
-
-
-
-
-
         </div>
+
+
+        <!-- LATEST NEWS  -->
+
+        <div class="latest-news">
+            <div class="latest-news-title">
+                <h4>Latest News</h4>
+            </div>
+            <div class="latest-news-content">
+                <marquee>
+                    <div class="news-ticker">
+                       <p> <span class="badge">NEWS</span>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
+                       <p> <span class="badge badge-tech">TECH</span>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p> 
+                       <p> <span class="badge badge-game">GAME</span>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p> 
+                    </div>
+                </marquee>
+            </div>
+        </div>
+
     </main>
 
     <!-- JQUERY -->
