--- a/index.html
+++ b/index.html
@@ -274,6 +274,39 @@
             </div>
         </section>
 
+        <section class="last-reviewed">
+            <div class="last-reviewed-detail">
+                <div class="review">
+                    <h3 class="review-title">DESPERADOS 3</h3>
+                    <p class="review-tags">Adventure | Action</p>
+                    <p class="review-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. </p>
+                    <p class="review-text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. <span><a href="#">READ MORE</a></span></p>
+                    <div class="review-user">
+                        <img src="./img/user.jpg" alt="User">
+                        <div class="review-user-detail">
+                            <p class="review-user-name">John Doe</p>
+                            <p class="review-user-date">July 12, 2020</p>
+                        </div>
+                        <div class="review-user-platform">
+                            <span class="fab fa-android fa-3x"></span>
+                            <span class="fab fa-apple fa-3x"></span>
+                            <span class="fab fa-windows fa-3x"></span>
+                        </div>
+                        <div class="review-user-rating">
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star"></span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="last-reviewed-image">
+
+            </div>
+        </section>
+
     </main>
 
     <!-- JQUERY -->
