--- a/index.html
+++ b/index.html
@@ -382,6 +382,58 @@
             </div>
         </section>
 
+        <!-- SHOWCASE SECTION -->
+
+        <section class="showcase">
+            <div class="showcase-content">
+
+                <div class="showcase-item">
+                    <div class="item-image">
+                        <img src="./img/game_6.jpg" alt="Game 5">
+                    </div>
+                    <div class="item-content">
+                        <h3>Age Of Empires II</h3>
+                        <a href="#"><i class="far fa-play-circle"></i></a>
+                        <p><em>Lorem ipsum dolor sit</em></p>
+                    </div>
+                </div>
+
+                <div class="showcase-item">
+                    <div class="item-image">
+                        <img src="./img/game_3.jpg" alt="Game 5">
+                    </div>
+                    <div class="item-content">
+                        <h3>Age Of Empires II</h3>
+                        <a href="#"><i class="far fa-play-circle"></i></a>
+                        <p><em>Lorem ipsum dolor sit</em></p>
+                    </div>
+                </div>
+
+                <div class="showcase-item">
+                    <div class="item-image">
+                        <img src="./img/game_4.jpg" alt="Game 5">
+                    </div>
+                    <div class="item-content">
+                        <h3>Age Of Empires II</h3>
+                        <a href="#"><i class="far fa-play-circle"></i></a>
+                        <p><em>Lorem ipsum dolor sit</em></p>
+                    </div>
+                </div>
+
+                <div class="showcase-item">
+                    <div class="item-image">
+                        <img src="./img/game_5.jpg" alt="Game 5">
+                    </div>
+                    <div class="item-content">
+                        <h3>Age Of Empires II</h3>
+                        <a href="#"><i class="far fa-play-circle"></i></a>
+                        <p><em>Lorem ipsum dolor sit amet consectetur adipisicing</em></p>
+                    </div>
+                </div>
+
+            </div>
+        </section>
+
 
     </main>
 
