--- a/index.html
+++ b/index.html
@@ -434,6 +434,83 @@
             </div>
         </section>
 
+        <!-- TEAM SECTION -->
+
+        <section class="team">
+
+            <div class="container">
+                <div class="section-title text-center">
+                    <h2 class="text-primary">THE TEAM</h2>
+                </div>
+
+                <div class="team-members">
+
+                    <div class="team-member">
+                        <div class="card">
+                            <div class="card-inner">
+                                <div class="card-front">
+                                    <img src="./img/team1.jpg" alt="Team Member 1">
+                                    <h4>John Doe</h4>
+                                </div>
+                                <div class="card-back">
+                                    <div class="card-back-content">
+                                        <p>FOUNDER</p>
+                                        <a href="#"><i class="fab fa-twitter-square fa-3x m-1"></i> </a>
+                                        <a href="#"><i class="fab fa-linkedin fa-3x m-1"></i> </a>
+                                        <a href="#"><i class="fab fa-facebook-square fa-3x m-1"></i> </a>
+                                    </div>
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="team-member">
+                        <div class="card">
+                            <div class="card-inner">
+                                <div class="card-front">
+                                    <img src="./img/team2.jpg" alt="Team Member 1">
+                                    <h4>Janis Joplin</h4>
+                                </div>
+                                <div class="card-back">
+                                    <div class="card-back-content">
+                                        <p>DESIGNER</p>
+                                        <a href="#"><i class="fab fa-twitter-square fa-3x m-1"></i> </a>
+                                        <a href="#"><i class="fab fa-linkedin fa-3x m-1"></i> </a>
+                                        <a href="#"><i class="fab fa-facebook-square fa-3x m-1"></i> </a>
+                                    </div>
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="team-member">
+                        <div class="card">
+                            <div class="card-inner">
+                                <div class="card-front">
+                                    <img src="./img/team3.jpg" alt="Team Member 1">
+                                    <h4>John Doe</h4>
+                                </div>
+                                <div class="card-back">
+                                    <div class="card-back-content">
+                                        <p>DEVELOPER</p>
+                                        <a href="#"><i class="fab fa-twitter-square fa-3x m-1"></i> </a>
+                                        <a href="#"><i class="fab fa-linkedin fa-3x m-1"></i> </a>
+                                        <a href="#"><i class="fab fa-facebook-square fa-3x m-1"></i> </a>
+                                    </div>
+
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+
+
+        </section>
+
 
     </main>
 
