--- a/index.html
+++ b/index.html
@@ -511,8 +511,61 @@
 
         </section>
 
+        <!-- CONTACT SECTION -->
+
+        <section class="contact">
+            <div class="container">
+
+                <div class="section-title text-center">
+                    <h2 class="text-primary">CONTACT</h2>
+                </div>
+
+                <div class="contact-content">
+                    <div class="contact-content-detail">
+                        <h3>GET IN TOUCH</h3>
+                        <ul>
+                            <li>
+                                <i class="fas fa-map-marker-alt fa-3x"></i>
+                                <p>Downtown Suite, Avenue 123/C:5 Akçay - Balıkesir</p>
+                            </li>
+                            <li>
+                                <i class="fas fa-envelope fa-3x"></i>
+                                <p>info (at) d503 (dot) com</p>
+                            </li>
+                            <li>
+                                <i class="fas fa-phone fa-3x"></i>
+                                <p>555-333-666-444</p>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="contact-content-form">
+                        <form>
+                            <input type="text" placeholder="* Your Name" required>
+                            <input type="email" placeholder="* Your Email" required>
+                            <textarea placeholder="* Your Message" rows="5" required></textarea>
+                            <input type="submit" value="SEND">
+                        </form>
+                    </div>
+                </div>
+
+            </div>
+        </section>
 
     </main>
+
+    <footer>
+        <div class="container">
+            <div class="copyright">
+                <p>2020 NO &copy; ARİN YAZILIM</p>
+            </div>
+
+            <div class="down-social-link">
+                <a href="#" class="fc">F</a>
+                <a href="#" class="tw">T</a>
+                <a href="#" class="yt">Y</a>
+            </div>
+        </div>
+    </footer>
 
     <!-- JQUERY -->
     <script src="js/jquery-3.5.1.slim.js"></script>
