--- a/index.html
+++ b/index.html
@@ -41,9 +41,14 @@
                 </ul>
 
                 <div class="login-area">
-                    <a href="#" class="btn btn-primary">Login<span><i class="fas fa-sign-in-alt"></i></span></a>
-                    <a href="#" class="btn ml-2">Sign Up<span><i class="fas fa-user-plus"></i></span></a>
+                    <a href="#" class="btn btn-primary"><span>Login</span><i class="fas fa-sign-in-alt"></i></a>
+                    <a href="#" class="btn ml-2"><span>Sign Up</span><i class="fas fa-user-plus"></i></a>
                 </div>
+
+                <input type="checkbox" id="chek">
+                <label for="chek" class="open-menu">
+                    <i class="fas fa-bars"></i>
+                </label>
             </div>
         </div>
 
@@ -75,10 +80,14 @@
 
                     <div class="search-area">
                         <form>
-                            <input type="search" placeholder="Seacrh">
+                            <input type="search" placeholder="Search">
                             <button type="submit" class="btn"><i class="fa fa-search"></i></button>
                         </form>
                     </div>
+
+                    <label for="chek" class="close-menu">
+                        <i class="fas fa-times"></i>
+                    </label>
 
                 </nav>
             </div>
