--- a/index.html
+++ b/index.html
@@ -100,7 +100,13 @@
         <div class="main-slider owl-carousel owl-theme">
             <!--Single Slide-->
             <div class="single-slide" data-dot="<span>01.</span>">
-                <img src="./img/slide_3.jpg">
+
+                <picture>
+                    <source srcset="./img/slide_4_small.jpg" media="(max-width: 768px)">
+                    <img srcset="./img/slide_4.jpg">
+                </picture>
+
+                
                 <div class="slide-overlay">
                     <div class="container">
                         <div class="slide-content">
@@ -436,7 +442,7 @@
                     <div class="item-content">
                         <h3>Age Of Empires II</h3>
                         <a href="#"><i class="far fa-play-circle"></i></a>
-                        <p><em>Lorem ipsum dolor sit amet consectetur adipisicing</em></p>
+                        <p><em>Lorem ipsum dolor sit</em></p>
                     </div>
                 </div>
 
